	(slime-set-package): Ditto.
	
2008-03-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (classify-symbol, symbol-classification->string): Add
	classification of symbols denoting type specifier, and denoting
	constants.
	
2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-eval-macroexpand): Indent expansion.
	
2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-edit-definition-cont): If no definition could
	be found, print also the package name in the error message where
	the definition was tried to be found in.
	
2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-region-for-defun-function): Deleted.
	(slime-region-for-defun-at-point): Use beginning-of-defun
	and not beginning-of-sexp.
	(slime-flash-region): New function.
	(slime-compile-region): Use it.

2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-xref-group): Renamed from slime-location-to-string.
	Handle source-form locations.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-find-definitions-function): Renamed from
	slime-edit-definition-fallback-function.
	(slime-find-definitions): Use it.
	(slime-find-tag-if-tags-table-visited): Deleted.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-operate-on-point): Signal an error if
	there is no object to operate on.

2008-03-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-toggle-details): Inhibit point-motion-hooks.
	This is a workaround for problems with the --more-- field.

2008-03-07  Helmut Eller  <heller@common-lisp.net>

	Be GC friendlier when parsing net packets.

	* slime.el (slime-net-read): Instead of consing a fresh string,
	use narrow-to-region and read the packet out of the buffer.

2008-03-04  Helmut Eller  <heller@common-lisp.net>

	* test.sh: Updated for Emacs 23.

2008-03-04  Andreas Fuchs <asf@boinkor.net>

	* swank.asd (asdf:output-files, asdf:perform): Make compile-op on