@@ -34,6 +34,11 @@
 
 	* slime.el (slime-eval-macroexpand): Indent expansion.
 	
+2008-03-14  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-repl-return-behaviour): Deleted.  Rebind
+	the key if you don't like what the command does.
+
 2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime.el (slime-edit-definition-cont): If no definition could
